--- a/pom.xml
+++ b/pom.xml
@@ -1461,6 +1461,7 @@ under the License.
 							<excludes>
 								<exclude>@org.apache.flink.annotation.PublicEvolving</exclude>
 								<exclude>@org.apache.flink.annotation.Internal</exclude>
+								<exclude>org.apache.flink.api.java.utils.ParameterTool</exclude>
 								<exclude>org.apache.flink.streaming.api.functions.sink.RichSinkFunction#invoke(java.lang.Object)</exclude>
 								<exclude>org.apache.flink.streaming.api.functions.sink.SinkFunction</exclude>
 								<exclude>org.apache.flink.api.java.hadoop.mapred.HadoopInputFormat</exclude>
